Ändrade så att headern är för Jonas

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <!--Jonas -->
-    <nav></nav>
+    <header>
+      <nav></nav>
+    </header>
     <main>
       <!-- Hassan -->
-      <header class="evenemang-header"></header>
+      <section class="evenemang-header"></section>
       <!-- William -->
       <section class="evenemang-kort"></section>
     </main>
