bilder och uppdatering av header

--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
     </header>
     <main>
       <!-- Hassan -->
-      <section class="evenemang-header"></section>
-      
+      <section class="container">
+        <section class="evenemang-header">
+          <section class="info-evenemang">
+            <h3>Evenemang</h3>
+            <br />
+            <p>Hej och välkommna till våran sida gällande evenmangen vi har!</p>
+            <br />
+            <p>
+              Här kommer vi att dela med oss om våra tidigare och kommande 
+              <br>
+              evenemang och lite info om när och var de kommer att ske
+            </p>
+          </section>
+          <img class="bild13" src="bilder/bild13.jpg" alt="Högläsning" />
+          
+        </section>
+      </section>
+
       <!-- William -->
       <section class="evenemang-kort"></section>
     </main>
