--- a/index.html
+++ b/index.html
@@ -15,9 +15,54 @@
       <!-- Hassan -->
       <section class="evenemang-header"></section>
       
+
+
+
+
+
+
+
       <!-- William -->
-      <section class="evenemang-kort"></section>
+      <section class="evenemang-kort-main">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <section class="evenemang-kort">
+        <img class="evenemang-kort-bild-1">
+          <section class="evenemang-kort-content">
+            <span class="evenemang-kort-tags">
+                <p> Evenemang </p>
+                <p>7 December 2024 </p>
+            </span>
+
+          <h2>Svante Svantesson kommer till Pärmar och Poesi</h2>
+          <p class="evenemang-kort-info">
+            Svantes nya bok handlar om att läsa böcker.
+            <br>
+            Den 5 november kommer han 
+            till vår bokhandel för att berätta hur 
+            han bestämde sig för att läsa böcker.</p>
+          <button>Anmäl dig till evenemanget</button>
+          </section>
+      </section>
+
+      </section>
+
+
+
+
+
+
+
+
+
     </main>
+
+
+
 
     <!-- Milton -->
     <footer></footer>
