Teamet live share commit to main

--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pärmar och Poesi</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
 
     <!--Jonas -->
     <header>
-      <nav></nav>
+      <a href="#"><img src="img/logo.png" alt="logo" id="logo" /></a>
+      <nav class="desktop-menu">
+        <ul>
+          <li><a href="index.html">Hem</a></li>
+          <li><a href="bocker.html">Böcker</a></li>
+          <li><a href="omoss.html">Om oss</a></li>
+          <li class="evenemang-button"><a href="evenemang.html">Evenemang</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <div class="hamburger">
+          <input type="checkbox" class="menu-icon" id="menu-btn" />
+          <label for="menu-btn" class="menu-icon">
+            <span class="navicon"></span>
+          </label>
+          <ul class="menu">
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="bocker.html">Böcker</a></li>
+            <li><a href="omoss.html">Om oss</a></li>
+            <li><a href="evenemang.html">Evenemang</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <main>
 
@@ -18,11 +40,24 @@
 
 
       <!-- Hassan -->
-      <section class="evenemang-header"></section>
+      <section class="container">
+        <section class="evenemang-header">
+          
+          <section class="info-evenemang">
+            <h3>Evenemang</h3>
+            <br />
+            <p>Hej och välkommna till våran sida gällande evenmangen vi har!</p>
+            <br />
+            <p>
+              Här kommer vi att dela med oss om våra tidigare och kommande 
+              <br>
+              evenemang och lite info om när och var de kommer att ske
+            </p>
+          </section>
 
-
-
-
+          <img class="bild13" src="img/bild13.jpg" alt="Högläsning" />
+        </section>
+      </section>
 
 
 
@@ -30,7 +65,31 @@
 
 
       <!-- William -->
-      <section class="evenemang-kort-main"></section>
+      <section class="evenemang-kort-main">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <section class="evenemang-kort">
+        <img class="evenemang-kort-bild-1" src="img/evenemang-kort-bild-1.webp">
+          <section class="evenemang-kort-content">
+            <span class="evenemang-kort-tags">
+                <p> Evenemang </p>
+                <p>7 December 2024 </p>
+            </span>
+          <h2>Svante Svantesson kommer till Pärmar och Poesi</h2>
+          <p class="evenemang-kort-info">
+            Svantes nya bok handlar om att läsa böcker.
+            <br>
+            Den 5 november kommer han 
+            till vår bokhandel för att berätta hur 
+            han bestämde sig för att läsa böcker.</p>
+          <button>Anmäl dig till evenemanget</button>
+          </section>
+      </section>
+      </section>
 
 
 
@@ -44,16 +103,8 @@
 
 
     <!-- Milton -->
-    <footer></footer>
-
-
-
-
-
-
-
-
-
+    <footer>
+    
 
   </body>
 </html>
