--- a/bocker.html
+++ b/bocker.html
@@ -60,8 +60,13 @@
           <img src="img/htmlcssbok.webp" alt="" />
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
-            <p class="genre"></p>
-            <p class="synopsis"></p>
+            <p class="genre">Action</p>
+            <p class="synopsis">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non
+              architecto nobis sunt autem. Quos autem placeat consequuntur
+              aperiam, nesciunt consequatur rem aut esse mollitia natus nam
+              dolores, ut possimus commodi.
+            </p>
           </section>
         </section>
 
@@ -69,8 +74,41 @@
           <img src="img/htmlcssbok.webp" alt="" />
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
-            <p class="genre"></p>
-            <p class="synopsis"></p>
+            <p class="genre">Action</p>
+            <p class="synopsis">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non
+              architecto nobis sunt autem. Quos autem placeat consequuntur
+              aperiam, nesciunt consequatur rem aut esse mollitia natus nam
+              dolores, ut possimus commodi.
+            </p>
+          </section>
+        </section>
+
+        <section class="bocker-kort">
+          <img src="img/htmlcssbok.webp" alt="" />
+          <section class="bocker-info">
+            <h2 class="bok-titel">HTML och CSS</h2>
+            <p class="genre">Action</p>
+            <p class="synopsis">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non
+              architecto nobis sunt autem. Quos autem placeat consequuntur
+              aperiam, nesciunt consequatur rem aut esse mollitia natus nam
+              dolores, ut possimus commodi.
+            </p>
+          </section>
+        </section>
+
+        <section class="bocker-kort">
+          <img src="img/htmlcssbok.webp" alt="" />
+          <section class="bocker-info">
+            <h2 class="bok-titel">HTML och CSS</h2>
+            <p class="genre">Action</p>
+            <p class="synopsis">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non
+              architecto nobis sunt autem. Quos autem placeat consequuntur
+              aperiam, nesciunt consequatur rem aut esse mollitia natus nam
+              dolores, ut possimus commodi.
+            </p>
           </section>
         </section>
       </section>
