lade till footer i bocker.html

--- a/bocker.html
+++ b/bocker.html
@@ -119,6 +119,44 @@
     </main>
 
     <!-- Milton -->
-    <footer></footer>
+    <footer>
+            <article class="information">
+              <section>
+                <h4>Öppetider</h4>
+                <p>Mån-Fre kl:10-16</p>
+                <p>Lör kl:10-14</p>
+                <p>Sön:Stängt</p>
+            </article>
+            <article class="contact">
+                <header>
+                  <h4>Kontakta oss</h4>
+                </header>
+                <p><a href="mailto:parmarochpoesi@hotmail.com">parmarochpoesi@hotmail.com</a></p>
+                <p><a href="tel:+46763672345">076-367 23 45</a></p>
+                <header>
+                    <h4>Info</h4>
+                  </header>
+                  <address>
+                    <p>412 60 Spillerboda</p>
+                    <p>Spillerbodavägen 36</p>
+                  </address>
+              </article>
+              <nav class="links">
+                <ul>
+                  <li><a href="Hem">Hem</a></li>
+                  <li><a href="books">Böcker</a></li>
+                  <li><a href="Evenemang">Evenemang</a></li>
+                  <li><a href="Om oss">Om oss</a></li>
+                </ul>
+              </nav>
+              <nav class="sociala-medier">
+                <p>Vi finns även på:</p>
+                <ul>
+                <li><a href="Facebook">Facebook</a></li>
+                <li><a href="Instagram">Instagram</a></li>
+                </ul>
+              </nav>
+
+    </footer>
   </body>
 </html>
