--- a/bocker.html
+++ b/bocker.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pärmar och Poesi</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!--Jonas -->
     <header>
-      <a href="#"><img src="img/logo.png" alt="logo" id="logo" /></a>
+      <a href="#"><img src="img/logo.png" alt="logo" id="logo"></a>
       <nav class="desktop-menu">
         <ul>
           <li><a href="index.html">Hem</a></li>
@@ -22,7 +22,7 @@
       </nav>
       <nav>
         <div class="hamburger">
-          <input type="checkbox" class="menu-icon" id="menu-btn" />
+          <input type="checkbox" class="menu-icon" id="menu-btn">
           <label for="menu-btn" class="menu-icon">
             <span class="navicon"></span>
           </label>
@@ -41,23 +41,23 @@
         <section class="evenemang-header">
           <section class="info-evenemang">
             <h3>Böcker</h3>
-            <br />
+            <br>
             <p>Hej och välkommna till våran sida gällande böckerna vi har!</p>
-            <br />
+            <br>
             <p>
               Här kommer vi att dela med oss om våra tidigare och kommande
-              <br />
+              <br>
               böcker.
             </p>
           </section>
 
-          <img class="bild13" src="img/bild13.jpg" alt="Högläsning" />
+          <img class="bild13" src="img/bild13.jpg" alt="Högläsning">
         </section>
       </section>
 
       <section class="bocker">
         <section class="bocker-kort">
-          <img src="img/htmlcssbok.webp" alt="" />
+          <img src="img/htmlcssbok.webp" alt="">
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
             <p class="genre">Action</p>
@@ -72,7 +72,7 @@
         </section>
 
         <section class="bocker-kort">
-          <img src="img/htmlcssbok.webp" alt="" />
+          <img src="img/htmlcssbok.webp" alt="">
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
             <p class="genre">Action</p>
@@ -87,7 +87,7 @@
         </section>
 
         <section class="bocker-kort">
-          <img src="img/htmlcssbok.webp" alt="" />
+          <img src="img/htmlcssbok.webp" alt="">
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
             <p class="genre">Action</p>
@@ -102,7 +102,7 @@
         </section>
 
         <section class="bocker-kort">
-          <img src="img/htmlcssbok.webp" alt="" />
+          <img src="img/htmlcssbok.webp" alt="">
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
             <p class="genre">Action</p>
