Evenemangskort mer kod

--- a/index.html
+++ b/index.html
@@ -63,17 +63,14 @@
 
 
 
+      
+
 
       <!-- William -->
       <section class="evenemang-kort-main">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <!-- Kort 1 -->
         <section class="evenemang-kort">
-        <img class="evenemang-kort-bild-1" src="img/evenemang-kort-bild-1.webp">
+        <img class="evenemang-kort-bild-1" src="img/evenemang-kort-cropped.jpg">
           <section class="evenemang-kort-content">
             <span class="evenemang-kort-tags">
                 <p> Evenemang </p>
@@ -81,11 +78,48 @@
             </span>
           <h2>Svante Svantesson kommer till Pärmar och Poesi</h2>
           <p class="evenemang-kort-info">
-            Svantes nya bok handlar om att läsa böcker.
+            Svantes nya bok handlar om böcker.
             <br>
             Den 5 november kommer han 
             till vår bokhandel för att berätta hur 
-            han bestämde sig för att läsa böcker.</p>
+            han bestämde sig för att börja läsa böcker.</p>
+          <button>Anmäl dig till evenemanget</button>
+          </section>
+      </section>
+      <!-- Kort 2 -->
+      <section class="evenemang-kort">
+          <section class="evenemang-kort-content">
+            <span class="evenemang-kort-tags" style="width:80%;">
+                <p> Evenemang </p>
+                <p>7 December 2024 </p>
+            </span>
+          <h2>Bokauktionen 2024</h2>
+          <p class="evenemang-kort-info">
+            Nu är det äntligen dags för årets auktion.
+            <br>
+            Här kan du fynda på mängder med böcker.
+          <br> 
+          Se till att anmäla dig så fort som möjligt, platserna tar snabbt slut.
+          </p>
+          <button class="evenemang-kort-button-variation" style="align-self: flex-start;">Anmäl dig till evenemanget</button>
+          </section>
+          <img class="evenemang-kort-bild-1-variation" style="margin-left:0vh;" src="img/evenemang-kort-cropped.jpg">
+      </section>
+
+        <!-- Kort 3 -->
+      <section class="evenemang-kort variation">
+        <img class="evenemang-kort-bild-1 variation" src="img/evenemang-kort-cropped.jpg">
+          <section class="evenemang-kort-content variation">
+            <span class="evenemang-kort-tags variation">
+                <p> Evenemang </p>
+                <p>7 December 2024 </p>
+            </span>
+          <h2>Lottas Läsklubb</h2>
+          <p class="evenemang-kort-info">
+            Varje söndag träffas vi för att prata om böcker vi läser.
+            Vi väljer ett tema som vi fokuserar på och går in i djupare diskussioner.
+            <br><br>
+            Fika kostar 30 kr som swishas till Lotta.</p>
           <button>Anmäl dig till evenemanget</button>
           </section>
       </section>
@@ -94,6 +128,8 @@
 
 
 
+
+      
     </main>
 
 
