fixade förhoppningsvis bocker.html html-kod

--- a/bocker.html
+++ b/bocker.html
@@ -81,6 +81,7 @@
             </p>
             <a href="#" class="order-button">Beställ bok</a>
           </section>
+        </section>
 
         <section class="bocker-kort">
           <img src="img/htmlcssbok.webp" alt="">
