Fixade headern/menyn, hade använt 2st nav vilket html validator inte gillade

--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pärmar och Poesi</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
     <!--Jonas -->
     <header>
-      <a href="#"><img src="img/logo.png" alt="logo" id="logo" /></a>
-      <nav class="desktop-menu">
-        <ul>
-          <li><a href="index.html">Hem</a></li>
-          <li><a href="bocker.html">Böcker</a></li>
-          <li><a href="omoss.html">Om oss</a></li>
-          <li class="evenemang-button"><a href="evenemang.html">Evenemang</a></li>
-        </ul>
-      </nav>
+      <a href="#"><img src="img/logo.png" alt="logo" id="logo"></a>
       <nav>
+        <div class="desktop-menu">
+          <ul>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="bocker.html">Böcker</a></li>
+            <li><a href="omoss.html">Om oss</a></li>
+            <li class="evenemang-button"><a href="evenemang.html">Evenemang</a></li>
+          </ul>
+        </div>
         <div class="hamburger">
-          <input type="checkbox" class="menu-icon" id="menu-btn" />
+          <input type="checkbox" class="menu-icon" id="menu-btn">
           <label for="menu-btn" class="menu-icon">
             <span class="navicon"></span>
           </label>
@@ -45,9 +45,9 @@
 
           <section class="info-evenemang">
             <h3>Evenemang</h3>
-            <br />
+            <br>
             <p>Hej och välkommna till våran sida gällande evenmangen vi har!</p>
-            <br />
+            <br>
             <p>
               Här kommer vi att dela med oss om våra tidigare och kommande 
               <br>
@@ -55,7 +55,7 @@
             </p>
           </section>
 
-          <img class="bild13" src="img/bild13.jpg" alt="Högläsning" />
+          <img class="bild13" src="img/bild13.jpg" alt="Högläsning">
         </section>
       </section>
 
