--- a/bocker.html
+++ b/bocker.html
@@ -10,17 +10,15 @@
     <!--Jonas -->
     <header>
       <a href="#"><img src="img/logo.png" alt="logo" id="logo"></a>
-      <nav class="desktop-menu">
-        <ul>
-          <li><a href="index.html">Hem</a></li>
-          <li><a href="bocker.html">Böcker</a></li>
-          <li><a href="omoss.html">Om oss</a></li>
-          <li class="evenemang-button">
-            <a href="evenemang.html">Evenemang</a>
-          </li>
-        </ul>
-      </nav>
       <nav>
+        <div class="desktop-menu">
+          <ul>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="bocker.html">Böcker</a></li>
+            <li><a href="omoss.html">Om oss</a></li>
+            <li class="evenemang-button"><a href="evenemang.html">Evenemang</a></li>
+          </ul>
+        </div>
         <div class="hamburger">
           <input type="checkbox" class="menu-icon" id="menu-btn">
           <label for="menu-btn" class="menu-icon">
@@ -48,7 +46,7 @@
             </p>
           </section>
   
-          <img class="bild" src="img/bild6.jpeg" alt="Högläsning" />
+          <img class="bild" src="img/bild6.jpeg" alt="Högläsning">
         </section>
       </section>
 
