--- a/bocker.html
+++ b/bocker.html
@@ -9,12 +9,12 @@
   <body>
     <!--Jonas -->
     <header>
-      <a href="#"><img src="img/logo.png" alt="logo" id="logo"></a>
+      <a href="index.html"><img src="img/logo.png" alt="logo" id="logo"></a>
       <nav>
         <div class="desktop-menu">
           <ul>
             <li><a href="index.html">Hem</a></li>
-            <li><a href="bocker.html">Böcker</a></li>
+            <li><a href="#" style="color:#af232c;pointer-events:none">Böcker</a></li>
             <li><a href="omoss.html">Om oss</a></li>
             <li class="evenemang-button"><a href="evenemang.html">Evenemang</a></li>
           </ul>
