fixade del av html-koden för validering

--- a/evenemang.html
+++ b/evenemang.html
@@ -70,7 +70,7 @@
       <section class="evenemang-kort-main">
         <!-- Kort 1 -->
         <section class="evenemang-kort">
-        <img class="evenemang-kort-bild-1" src="img/evenemang-kort-cropped.jpg">
+        <img class="evenemang-kort-bild-1" src="img/evenemang-kort-cropped.jpg" alt="man sitter i en fotölj och läser en bok">
           <section class="evenemang-kort-content">
             <span class="evenemang-kort-tags">
                 <p> Evenemang </p>
@@ -103,12 +103,12 @@
           </p>
           <button class="evenemang-kort-button-variation" style="align-self: flex-start;">Anmäl dig till evenemanget</button>
           </section>
-          <img class="evenemang-kort-bild-1-variation" style="margin-left:0vh;" src="img/evenemang-kort-cropped.jpg">
+          <img class="evenemang-kort-bild-1-variation" style="margin-left:0vh;" src="img/evenemang-kort-cropped.jpg" alt="man sitter i en fotölj och läser en bok">
       </section>
 
         <!-- Kort 3 -->
       <section class="evenemang-kort variation">
-        <img class="evenemang-kort-bild-1 variation" src="img/evenemang-kort-cropped.jpg">
+        <img class="evenemang-kort-bild-1 variation" src="img/evenemang-kort-cropped.jpg" alt="man sitter i en fotölj och läser en bok">
           <section class="evenemang-kort-content variation">
             <span class="evenemang-kort-tags variation">
                 <p> Evenemang </p>
@@ -141,7 +141,6 @@
     <!-- Milton -->
    <footer>
             <article class="information">
-              <section>
                 <h4>Öppetider</h4>
                 <p>Mån-Fre kl:10-16</p>
                 <p>Lör kl:10-14</p>
@@ -163,10 +162,10 @@
               </article>
               <nav class="links">
                 <ul>
-                  <li><a href="Hem">Hem</a></li>
-                  <li><a href="books">Böcker</a></li>
-                  <li><a href="Evenemang">Evenemang</a></li>
-                  <li><a href="Om oss">Om oss</a></li>
+                  <li><a href="index.html">Hem</a></li>
+                  <li><a href="bocker.html">Böcker</a></li>
+                  <li><a href="evenemang.html">Evenemang</a></li>
+                  <li><a href="omoss.html">Om oss</a></li>
                 </ul>
               </nav>
               <nav class="sociala-medier">
