--- a/omoss.html
+++ b/omoss.html
@@ -131,10 +131,10 @@
         </article>
         <nav class="links">
           <ul>
-            <li><a href="Hem">Hem</a></li>
-            <li><a href="books">Böcker</a></li>
-            <li><a href="Evenemang">Evenemang</a></li>
-            <li><a href="Om oss">Om oss</a></li>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="bocker.html">Böcker</a></li>
+            <li><a href="evenemang.html">Evenemang</a></li>
+            <li><a href="omoss.html">Om oss</a></li>
           </ul>
         </nav>
         <nav class="sociala-medier">
