--- a/bocker.html
+++ b/bocker.html
@@ -41,8 +41,8 @@
     </header>
     <main>
       <!-- Hassan -->
-      <section class="container">
-        <section class="evenemang-header">
+      <article class="container">
+        <article class="evenemang-header">
           <section class="info-evenemang">
             <h3>Böcker</h3>
             <p>Hej och välkommna till våran sida gällande böckerna vi har!</p>
@@ -53,11 +53,11 @@
           </section>
 
           <img class="bild" src="img/bild6.jpeg" alt="Högläsning">
-        </section>
-      </section>
+        </article>
+      </article>
 
-      <section class="bocker">
-        <section class="bocker-kort">
+      <article class="bocker">
+        <article class="bocker-kort">
           <img src="img/htmlcssbok.webp" alt="">
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
@@ -70,9 +70,9 @@
             </p>
             <a href="#" class="order-button">Beställ bok</a>
           </section>
-        </section>
+        </article>
 
-        <section class="bocker-kort">
+        <article class="bocker-kort">
           <img src="img/htmlcssbok.webp" alt="">
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
@@ -85,9 +85,9 @@
             </p>
             <a href="#" class="order-button">Beställ bok</a>
           </section>
-        </section>
+        </article>
 
-        <section class="bocker-kort">
+        <article class="bocker-kort">
           <img src="img/htmlcssbok.webp" alt="">
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
@@ -100,9 +100,9 @@
             </p>
             <a href="#" class="order-button">Beställ bok</a>
           </section>
-        </section>
+        </article>
 
-        <section class="bocker-kort">
+        <article class="bocker-kort">
           <img src="img/htmlcssbok.webp" alt="">
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
@@ -115,7 +115,7 @@
             </p>
             <a href="#" class="order-button">Beställ bok</a>
           </section>
-        </section>
+        </article>
       </section>
     </main>
 
