--- a/bocker.html
+++ b/bocker.html
@@ -56,9 +56,11 @@
         </article>
       </article>
 
-      <article class="bocker">
+      <section class="bocker">
         <article class="bocker-kort">
-          <img src="img/htmlcssbok.webp" alt="">
+          <figure>
+            <img src="img/htmlcssbok.webp" alt="HTML och CSS">
+          </figure>
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
             <p class="genre">Action</p>
@@ -73,7 +75,9 @@
         </article>
 
         <article class="bocker-kort">
-          <img src="img/htmlcssbok.webp" alt="">
+          <figure>
+            <img src="img/htmlcssbok.webp" alt="HTML och CSS">
+          </figure>
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
             <p class="genre">Action</p>
@@ -88,7 +92,9 @@
         </article>
 
         <article class="bocker-kort">
-          <img src="img/htmlcssbok.webp" alt="">
+          <figure>
+            <img src="img/htmlcssbok.webp" alt="HTML och CSS">
+          </figure>
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
             <p class="genre">Action</p>
@@ -103,7 +109,9 @@
         </article>
 
         <article class="bocker-kort">
-          <img src="img/htmlcssbok.webp" alt="">
+          <figure>
+            <img src="img/htmlcssbok.webp" alt="HTML och CSS">
+          </figure>
           <section class="bocker-info">
             <h2 class="bok-titel">HTML och CSS</h2>
             <p class="genre">Action</p>
