--- a/omoss.html
+++ b/omoss.html
@@ -10,13 +10,13 @@
 
     <!---Header-->
     <header class="main-header">
-      <a href="#"><img src="img/logo.png" alt="logo" id="logo"></a>
+      <a href="index.html"><img src="img/logo.png" alt="logo" id="logo"></a>
       <nav>
         <div class="desktop-menu">
           <ul>
             <li><a href="index.html">Hem</a></li>
             <li><a href="bocker.html">Böcker</a></li>
-            <li><a href="omoss.html">Om oss</a></li>
+            <li><a style="color:#af232c;pointer-events:none">Om oss</a></li>
             <li class="evenemang-button"><a href="evenemang.html">Evenemang</a></li>
           </ul>
         </div>
