Startsidan-små-ändringar

--- a/index.html
+++ b/index.html
@@ -75,18 +75,19 @@
       <section class="start-main-section-3">
 
         <section class="startsida-main-kort">
-          <img src="img/bild14.jpg" alt="En grupp av böcker">
+          <img class="startsidan-main-sida-logo" src="img/logo-stor.png" alt="En grupp av böcker">
           <br>
           <br>
-          <h2 style="color:#AF232C;">Läs en bok vetja. </h2>
-          <h3 style="font-weight: 500;padding:3px;"><em>- Svante Svantesson</em> </h3>
+          <h2 style="color:#AF232C;">Välkommen in i klubben! </h2>
+          <h3 style="font-weight: 500;padding:3px;"><em>- Pärmar och Poesi</em> </h3>
           <p> 
             <br><br>
-            Svante har ett poetiskt sätt att förmedla sina tankar. 
-            <br>Inte undra på att han har skrivit femhundrasextiotre böcker.
+            Spillerbodavägen 36, 412 60 Spillerboda.
+            <br>
+            parmarochpoesi@hotmail.com
             <br>
             <br>
-            Så gör som Svante: Ta upp en bok och njut. <br>Den väntar på dig.
+            Tele: 076-367 23 45
           </p>
         </section>
       </section>
