--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <section class="start-main-section-3">
 
         <section class="startsida-main-kort">
-          <img class="startsidan-main-sida-logo" src="img/logo-stor.png" alt="En grupp av böcker">
+          <img class="startsidan-main-sida-logo" src="img/logo-stor.png" alt="Pärmar och Poesi Logga">
           <br>
           <br>
           <h2 style="color:#AF232C;">Välkommen in i klubben! </h2>
