Tailwind på startsidan

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pärmar och Poesi</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
 
@@ -40,19 +41,19 @@
     <section class="start-container">
       <!-- Main header -->
     <section class="start_main">
-      <section class="start-header">
-        <h3>Välkommen till</h3>
-        <h1>Pärmar & Poesi </h1>
+      <section class="start-header leading-snug">
+        <h3 class="leading-none">Välkommen till</h3>
+        <h1 class="font-bold">Pärmar & Poesi </h1>
         <br>
         <h3 style="color:#F4F4F8;"><em>Din lokala bokhandel i Spillersboda.</em> </h3>
-        <h3 style="color:#F4F4F8;"><em>Vi har regelbundna evenemang.</em> </h3>
+        <h3 style="color:#F4F4F8;"><em>Läs om våra aktuella evenemang.</em> </h3>
       
         <button class="start-main-header-button" onclick="document.location='evenemang.html'">Evenemang</button>
       </section>
 
-      <section class="start-main-section-1">
+      <section class="start-main-section-1 leading-tight">
         <section class="start-main-section-1-h1-p">
-        <h1> Svante Svantesson kommer till Pärmar och Poesi. </h1>
+        <h1 class="font-bold leading-tight"> Svante Svantesson kommer till Pärmar och Poesi. </h1>
         <br><br>
         <p>Svante är känd för att skriva böcker. <br>Nu kommer han till oss för att berätta om böcker. <br><br> <strong>Missa det inte!</strong>  </p>
         <button class="start-main-section-1-button" onclick="document.location='evenemang.html'">Evenemang</button>
@@ -64,7 +65,7 @@
 
       
       <section class="start-main-section-2">
-        <h1> Öppna upp en ny värld. </h1>
+        <h1 class="font-bold"> Öppna upp en ny värld. </h1>
         <br>
         <p class="start-main-section-2-linebreak"></p>
         <br>
@@ -78,16 +79,17 @@
           <img class="startsidan-main-sida-logo" src="img/logo-stor.png" alt="Pärmar och Poesi Logga">
           <br>
           <br>
-          <h2 style="color:#AF232C;">Välkommen in i klubben! </h2>
-          <h3 style="font-weight: 500;padding:3px;"><em>- Pärmar och Poesi</em> </h3>
-          <p> 
+          <h2 class="text-3xl font-bold" style="color:#AF232C;">Välkommen in i klubben! </h2>
+          <h3 class="text-xl font-bold leading-relaxed" style="padding:3px;"><em>- Pärmar och Poesi</em> </h3>
+          <p class="text-lg" >  
             <br><br>
-            Spillerbodavägen 36, 412 60 Spillerboda.
+            <em> Spillerbodavägen 36, 412 60 Spillerboda.
             <br>
             parmarochpoesi@hotmail.com
             <br>
             <br>
             Tele: 076-367 23 45
+          </em>
           </p>
         </section>
       </section>
@@ -101,32 +103,32 @@
 
     <!-- Aside sektion -->
     <aside class="start-aside">
-      <h2>Veckans Favoriter </h2>
+      <h2 class="text-2xl">Veckans Favoriter </h2>
 
       <section class="start-bok-1">
         <section class="start-bok-1-text">
-            <h3>Harry Potter </h3>
+            <h3 class="text-lg font-bold leading-none">Harry Potter </h3>
             <p>En klassisk berättelse om den magiske pojken Harry. </p>
             <br>
-            <button>Beställ här </button>
+            <button class="text-sm">Beställ här </button>
     </section>
       <img class="start-aside-bok-bild" src="img/start-aside-bok-bild.jpg" alt="Bild på en Harry Potter bok">
       </section>
       <section class="start-bok-1">
         <section class="start-bok-1-text">
-            <h3>Harry Potter </h3>
+            <h3 class="text-lg font-bold leading-none">Harry Potter </h3>
             <p>En klassisk berättelse om den magiske pojken Harry. </p>
             <br>
-            <button>Beställ här </button>
+            <button class="text-sm">Beställ här </button>
     </section>
       <img class="start-aside-bok-bild" src="img/start-aside-bok-bild.jpg" alt="Bild på en Harry Potter bok">
       </section>
       <section class="start-bok-1">
         <section class="start-bok-1-text">
-            <h3>Harry Potter </h3>
+            <h3 class="text-lg font-bold leading-none">Harry Potter </h3>
             <p>En klassisk berättelse om den magiske pojken Harry. </p>
             <br>
-            <button>Beställ här </button>
+            <button class="text-sm">Beställ här </button>
     </section>
       <img class="start-aside-bok-bild" src="img/start-aside-bok-bild.jpg" alt="Bild på en Harry Potter bok">
       </section>
