stylat om headern så den kommer "in" lite mer, döpt om den i css

--- a/evenemang.html
+++ b/evenemang.html
@@ -9,7 +9,7 @@
   <body>
 
     <!--Jonas -->
-    <header>
+    <header class="main-header">
       <a href="index.html"><img src="img/logo.png" alt="logo" id="logo"></a>
       <nav>
         <div class="desktop-menu">
