--- a/bocker.html
+++ b/bocker.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!--Jonas -->
-    <header>
+    <header class="main-header">
       <a href="index.html"><img src="img/logo.png" alt="logo" id="logo"></a>
       <nav>
         <div class="desktop-menu">
