Fixat efter felsökning av startsidan

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                 <p>Mån-Fre kl:10-16</p>
                 <p>Lör kl:10-14</p>
                 <p>Sön:Stängt</p>
-            </article>
+                </section>
+              </article>
             <article class="contact">
                 
                   <h4>Kontakta oss</h4>
