Fixat efter felsökning av startsidan

--- a/omoss.html
+++ b/omoss.html
@@ -114,6 +114,7 @@
           <p>Mån-Fre kl:10-16</p>
           <p>Lör kl:10-14</p>
           <p>Sön:Stängt</p>
+          </section>
       </article>
       <article class="contact">
           
