uppdaterad efter felsökning evenemang

--- a/evenemang.html
+++ b/evenemang.html
@@ -73,8 +73,8 @@
         <img class="evenemang-kort-bild-1" src="img/evenemang-kort-cropped.jpg" alt="man sitter i en fotölj och läser en bok">
           <section class="evenemang-kort-content">
             <span class="evenemang-kort-tags">
-                <p> Evenemang </p>
-                <p>7 December 2024 </p>
+                <span> Evenemang </span>
+                <span>7 December 2024 </span>
             </span>
           <h2>Svante Svantesson kommer till Pärmar och Poesi</h2>
           <p class="evenemang-kort-info">
@@ -90,8 +90,8 @@
       <section class="evenemang-kort">
           <section class="evenemang-kort-content">
             <span class="evenemang-kort-tags" style="width:80%;">
-                <p> Evenemang </p>
-                <p>7 December 2024 </p>
+                <span> Evenemang </span>
+                <span>7 December 2024 </span>
             </span>
           <h2>Bokauktionen 2024</h2>
           <p class="evenemang-kort-info">
@@ -111,8 +111,8 @@
         <img class="evenemang-kort-bild-1 variation" src="img/evenemang-kort-cropped.jpg" alt="man sitter i en fotölj och läser en bok">
           <section class="evenemang-kort-content variation">
             <span class="evenemang-kort-tags variation">
-                <p> Evenemang </p>
-                <p>7 December 2024 </p>
+                <span>Evenemang</span> 
+                <span>7 December 2024 </span>
             </span>
           <h2>Lottas Läsklubb</h2>
           <p class="evenemang-kort-info">
