uppdaterade html-kod för headern

--- a/index.html
+++ b/index.html
@@ -15,16 +15,22 @@
 
     <!--Jonas -->
     <header class="main-header">
-      <a href="#" style="color:#af232c;pointer-events:none"><img src="img/logo.png" alt="logo" id="logo" /></a>
-      <nav class="desktop-menu">
-        <ul>
-          <li><a href="#" style="color:#af232c;pointer-events:none">Hem</a></li>
-          <li><a href="bocker.html">Böcker</a></li>
-          <li><a href="omoss.html">Om oss</a></li>
-          <li class="evenemang-button"><a href="evenemang.html">Evenemang</a></li>
-        </ul>
-      </nav>
+      <a href="index.html"><img src="img/logo.png" alt="logo" id="logo" /></a>
       <nav>
+        <div class="desktop-menu">
+          <ul>
+            <li>
+              <a href="index.html" style="color: #af232c; pointer-events: none"
+                >Hem</a
+              >
+            </li>
+            <li><a href="bocker.html">Böcker</a></li>
+            <li><a href="omoss.html">Om oss</a></li>
+            <li class="evenemang-button">
+              <a href="evenemang.html">Evenemang</a>
+            </li>
+          </ul>
+        </div>
         <div class="hamburger">
           <input type="checkbox" class="menu-icon" id="menu-btn" />
           <label for="menu-btn" class="menu-icon">
