--- a/omoss.html
+++ b/omoss.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Eivor Svensson, Gunnar Eriksson">
     <meta name="robots" content="index, follow">
     <title>Om oss - Pärmar och Poesi</title>  
-    <link rel="stylesheet" href="omoss.style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
