upd meta taggar

--- a/bocker.html
+++ b/bocker.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pärmar och Poesi</title>
+    <meta name="description" content="Utforska ett brett utbud av böcker inom olika genrer på Pärmar & Poesi. Upptäck dina nästa favoritböcker och njut av inspirerande litteratur.">
+    <meta name="keywords" content="böcker, litteratur, läsning, genrer, favoritböcker, inspirerande litteratur, spillerboda">
+    <meta name="author" content="Pärmar & Poesi Team">
+    <meta name="robots" content="index, follow">
+    <title>Bocker - Pärmar och Poesi</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
