--- a/evenemang.html
+++ b/evenemang.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pärmar och Poesi</title>
+    <meta name="description" content="Utforska kommande evenemang och träffar i vår bokklubb. Delta i bokdiskussioner och speciella evenemang för bokälskare.">
+    <meta name="keywords" content="bokklubb, bokklubb i spillerboda, evenemang, bokdiskussioner, litteratur, träffar, bokälskare">
+    <meta name="author" content="Eivor Svensson, Gunnar Eriksson">
+    <meta name="robots" content="index, follow">
+    <title>Evenemang - Pärmar&Poesi</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
