--- a/omoss.html
+++ b/omoss.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lär Känna Våra Engagerade Medlemmar och Grundare i Bokklubben">
-    <meta name="keywords" content="bokklubb, litteratur, böcker, läsning, bokdiskussion, bokträffar, författare, medlemmar, ">
+    <meta name="keywords" content="bokklubb, bokklubb i spillerboda litteratur, böcker, läsning, bokdiskussion, bokträffar, författare, medlemmar, ">
     <meta name="author" content="Eivor Svensson, Gunnar Eriksson">
     <meta name="robots" content="index, follow">
     <title>Om oss - Pärmar och Poesi</title>  
