--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Välkommen till vår bokklubb! Upptäck nya böcker, delta i diskussioner och var med på våra evenemang. En plats för alla bokälskare.">
-    <meta name="keywords" content="bokklubb, böcker, läsning, litteratur, bokdiskussioner, evenemang">
+    <meta name="keywords" content="bokklubb, bokklubb i spillerboda böcker, läsning, litteratur, bokdiskussioner, evenemang">
     <meta name="author" content="Eivor Svensson, Gunnar Eriksson">
     <meta name="robots" content="index, follow">
     <title>Startsida - Pärmar och Poesi</title>
