--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Eivor Svensson, Gunnar Eriksson">
     <meta name="robots" content="index, follow">
     <title>Startsida - Pärmar och Poesi</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
